Added ability to change a feed's collection
